syntax = "proto3";
option csharp_namespace = "GrpcService101";

package greet;

message AverageRequest{
  int32 number = 1;
}

message AverageResponse{
  double average = 1;
}

service Average{
  rpc ComputeAverage (stream AverageRequest) returns (AverageResponse);
}
